<resources>
    <string name="app_name">Card Info Finder</string>
    <string name="problem_text">A problem occurred</string>
    <string name="dismiss_text">Dismiss</string>
    <string name="card_number">Card Number</string>
    <string name="find_any_card">Find Any Card</string>
    <string name="find">Find</string>
    <string name="card_brand">Card Brand: </string>
    <string name="card_type">"Card Type: "</string>
    <string name="bank">"Bank: "</string>
    <string name="country">"Country: "</string>
    <string name="desc">Just enter the credit or debit card number in the input field below and tap the FIND button. Viola!</string>
    <string name="retry_text">Retry</string>
    <string name="connection_error_text">Check your internet connection and try again</string>
    <string name="network_error">Network Error</string>
</resources>