<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_any_card"
        android:textSize="@dimen/twenty_four_sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/sixteen_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/desc_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        android:layout_margin="@dimen/sixteen_dp"
        android:text="@string/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textSize="@dimen/forteen_sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/sixteen_dp"
        app:layout_constraintTop_toBottomOf="@+id/desc_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cardNumberLayout"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_weight="2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:hint="@string/card_number"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardNumberField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_dp"
            android:layout_marginTop="@dimen/eight_dp"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="@dimen/eight_dp"
            android:textSize="@dimen/forteen_sp"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/findButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/fifty_dp"
            android:padding="@dimen/eight_dp"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/eight_dp"
            android:text="@string/find"
            android:layout_marginBottom="@dimen/sixteen_dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sixteen_sp"
            android:fontFamily="@font/poppins_medium" />
    </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/detailsCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:elevation="@dimen/eight_dp"
            app:cardElevation="@dimen/eight_dp"
            app:cardCornerRadius="@dimen/eight_dp"
            android:layout_margin="@dimen/forteen_dp">

            <LinearLayout
                android:orientation="vertical"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/sixteen_dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:layout_marginStart="@dimen/sixteen_dp"
                    android:orientation="horizontal">
                <TextView
                    android:id="@+id/cardBrandLabel"
                    android:text="@string/card_brand"
                    android:layout_marginEnd="@dimen/eight_dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/sixteen_sp" />

                    <TextView
                        android:id="@+id/cardBrandTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        tools:text="Brand"
                        android:textSize="@dimen/sixteen_sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:layout_marginStart="@dimen/sixteen_dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/cardTypeLabel"
                        android:text="@string/card_type"
                        android:layout_marginEnd="@dimen/eight_dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/poppins"
                        android:textSize="@dimen/sixteen_sp" />

                    <TextView
                        android:id="@+id/cardTypeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        tools:text="Type"
                        android:textSize="@dimen/sixteen_sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:layout_marginStart="@dimen/sixteen_dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/bankLabel"
                        android:text="@string/bank"
                        android:layout_marginEnd="@dimen/eight_dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/sixteen_sp" />

                    <TextView
                        android:id="@+id/bankTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        tools:text="Zenith Bank"
                        android:textSize="@dimen/sixteen_sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:layout_marginStart="@dimen/sixteen_dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/countryLabel"
                        android:text="@string/country"
                        android:layout_marginEnd="@dimen/eight_dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/sixteen_sp" />

                    <TextView
                        android:id="@+id/countryTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Nigeria"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/sixteen_sp"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progressLoader"
        style="@style/SpinKitView.Small.WanderingCubes"
        android:layout_width="@dimen/seventy_dp"
        android:layout_height="@dimen/seventy_dp"
        android:layout_centerInParent="true"
        app:SpinKit_Color="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>